<resources>
    <string name="app_name">Jalendar</string>
    <string name="calendar_ask_premission">אנא אשר גישה ליומן</string>
    <string name="title_activity_day">DayActivity</string>

    <string name="instance_single">אינו חוזר</string>
    <string name="instance_daily">מדי יום</string>
    <string name="instance_weekly">מדי שבוע</string>
    <string name="instance_monthly_ivri">מדי חודש</string>
    <string name="instance_monthly_loazi">מדי חודש לועזי</string>
    <string name="instance_yearly_ivri">מדי שנה</string>
    <string name="instance_yearly_loazit">מדי שנה לועזית</string>
    <string name="display_month">חודשי</string>
    <string name="display_day">יומי</string>
    <string name="display_header">תצוגה:</string>
    <string name="tag_month_position">tagMonthPosition</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="last_month_position">lastMonthPosition</string>


    <string name="setting_header">תצורה:</string>
    <string name="checkbox_enable_notification">  הצגת תאריך פעילה  </string>
    <string name="config_option_0">יג תשרי תשח</string>
    <string name="config_option_1">יג תשרי התשח</string>
    <string name="config_option_3">י\"ג תשרי התש\"ח</string>
    <string name="share_facebook">שתף בפייסבוק</string>
    <string name="share_whatsapp">שתף בוואטסאפ</string>

    <string name="checkbox_switch_date_in_night">החלף תאריך בצאת הכוכבים</string>

    <string name="alert_location_message">אשר שימוש במיקום כדי לקבל לוח זמנים מדוייק</string>
    <string name="alert_location_title">מיקום</string>
    <string name="alert_default_title">הרשאות</string>
    <string name="alert_default_permissions">אנא אשר הראשות חסרות</string>
    <string name="ok">הבנתי</string>


    <string name="notif_explain">התראה זו הכרחית בכדי להציג את אייקון התאריך במכשיר</string>

    <string name="col_header_today">היום:</string>
    <string name="col_header_mincha">מנחה</string>
    <string name="col_header_Chatzos">חצות</string>
    <string name="col_header_mincha_ktana">מנחה קטנה</string>
    <string name="col_header_sunrise">זריחה</string>
    <string name="col_header_alos">עלות השחר</string>
    <string name="col_header_sof_shma_mga">סוף שמע מג"א</string>
    <string name="col_header_sof_shma_gra">סוף שמע גר"א</string>
    <string name="col_header_sof_tfila_mga">סוף תפילה מג"א</string>
    <string name="col_header_sof_tfila_gra">סוף תפילה גר"א</string>
    <string name="col_header_sunset">שקיעה</string>
    <string name="col_header_dusk">צאת הכוכבים</string>
    <string name="col_header_mincha_gdola">מנחה גדולה</string>
    <string name="col_header_knisat_shabbat">כניסת שבת (מחושב כ-18 דקות לפני שקיעה)</string>
    <string name="col_header_yeziat_shabbat">יציאת שבת</string>
    <string name="col_header_yeziat_shabbat_72">יציאת שבת ר"ת</string>
    <string name="col_header_parasha">פרשת השבוע:</string>

    <string name="checkbox_use_night_icons">הפוך צבעים בלילה</string>
    <string name="pick_place_title">הסבר לבחירת מיקום</string>
    <string name="place_picker_help">במסך הבא, הקלד בתיבת החיפוש את שם המקום הרצוי והקש לאישור</string>
    <string name="location_header">מיקום (לחישוב זמנים):</string>
    <string name="spinner_location_device">מצא מיקום נוכחי</string>
    <string name="spinner_location_spinner">בחר מיקום שונה</string>
    <string name="checkbox_enable_times_in_notif">הצג זמנים בוילון</string>
    <string name="place_holder_location">האם לבחור במיקום הבא: %1$s?</string>
    <string name="location_not_found">לא נמצא מיקום, נסה לבחור ידנית</string>
    <string name="location_result">בחירת מיקום</string>
    <string name="use_mga">מג\"א</string>
    <string name="use_gra">גר\"א</string>
    <string name="mga_header">שיטת זמנים:</string>
    <string name="checkbox_enable_omer">תזכורת עומר פעילה</string>
    <string name="notif_approved">הבנתי</string>
    <string name="notif_explain_new">התראה זו הכרחית כדי להציג את התאריך בקביעות</string>
    <string name="col_header_daf_yomi">דף יומי</string>
    <string name="tuesday">ג׳</string>
    <string name="wednsday">ד׳</string>
    <string name="thursday">ה׳</string>
    <string name="friday">ו׳</string>
    <string name="saturday">ז׳</string>
    <string name="sunday">א׳</string>
    <string name="monday">ב׳</string>
</resources>
